[INFER] Load atom pointer for CallProp stub call, bug 645629. r=bhackett